--- a/cpp08/ex02/Makefile
+++ b/cpp08/ex02/Makefile
@@ -6,7 +6,7 @@ RM = rm -f
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp MutantStack.cpp
+SRC = main.cpp
 
 HEADER = MutantStack.hpp MutantStack.tpp
 
